[tool.poetry]
name = "regassist"
version = "0.1.0"
description = "Web automation tool built using selenium which helps students register courses on their behalf."
authors = ["Shivam Gupta <shivam.gupta02210@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.23.1"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
